# doria

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  SPEC.md
.github/workflows/: ci.yml  rust.yml
crates/doria-rt/: Cargo.toml
crates/doriac/: Cargo.toml  build.rs
docs/: console-api-termutil-mapping.md  doria-development-plan.md  doria-end-to-end-plan.md  executable-initializers-and-attributes.md  php-interop-and-migration.md  stdlib-reference.md
docs/decisions/: 0011-native-execution-path.md  0013-stage-2-native-integers.md  0015-stage-2b-native-readonly-integer-locals.md  0017-stage-2c-native-int-arithmetic.md  0018-stage-2d-native-returned-int-expressions.md  0021-stage-4b-native-boolean-conditions.md  0022-stage-5a-native-writable-int-locals.md  0026-stage-6c-native-structured-while-bodies.md  0027-stage-7a-native-smoke-ir-boundary.md  0028-namespaces-use-include-and-directives.md  0033-stage-8a-native-readonly-string-locals-and-echo.md  0036-stage-8-mvp-string-echo-path.md  0037-stage-10-native-free-functions.md  0043-stage-11-mir-and-interpreter-oracle.md  0044-doria-rt-internal-abi.md  0045-runtime-strings-and-canonical-display-conversion.md  0074-stage-17-stdio-and-formatted-io.md  0075-io-family-tiers-and-failure-migration.md  0084-statics-and-constant-evaluation.md  0085-copy-scalar-default-arguments.md  0088-fluent-method-chaining.md  0089-stage-21-borrowing-rules.md  0092-collection-type-family-and-naming.md  0093-nullable-types-and-narrowing.md  (+1 more)
examples/: person.doria
scripts/: check_docs_authority.php  check_editor_highlighting.php
(+110 files in other folders)
