[workspace]
members = ["crates/doria-rt", "crates/doriac"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/dorialang/doria"
version = "0.1.0"

[workspace.dependencies]
ryu = { version = "=1.0.20", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
